--- a/frontend/IMS_WEB/package.json
+++ b/frontend/IMS_WEB/package.json
@@ -1,6 +1,9 @@
 {
   "name": "ims-web",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
